# ros1_manipulation

./: README.md
Docker/app/: Dockerfile  build_env.sh  launch_env.sh
Docker/dev/: Dockerfile  build_env.sh  launch_env.sh  x_server_connection.sh
my_robot/my_robot_description/: package.xml
my_robot/my_robot_description/config/: my_robot.rviz
my_robot/my_robot_description/launch/: bringup.launch
my_robot/my_robot_description/urdf/: floor.xacro  materials.xacro  my_robot.urdf.xacro  rail.xacro
my_robot/my_robot_moveit_config/: .setup_assistant  package.xml
my_robot/my_robot_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur10.srdf
my_robot/my_robot_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
my_robot_ai/: CMakeLists.txt  package.xml
my_robot_ai/src/: ai_pick_place_client.py  data_set.py  model.py
my_robot_behavior_trees/: CMakeLists.txt  package.xml
my_robot_behavior_trees/bt_xml/: move_rail.xml  pick_place.xml
my_robot_behavior_trees/launch/: bt_test.launch  pick_place_seq.launch
my_robot_behavior_trees/src/: main.cpp  move_rail_action.cpp  move_rail_action.h  move_rail_client.cpp  pick_place.h  pick_place_action.cpp  test_bt.cpp
my_robot_functions_cpp/: CMakeLists.txt  package.xml
my_robot_functions_python/: CMakeLists.txt  package.xml
my_robot_functions_python/launch/: launch_robot_actions.launch
my_robot_functions_python/src/: move_group_intro.py  object_database.csv  object_database.ods  object_location.csv  object_location.ods  pick_place.sh  pick_place_client.py  robot_actions.py  robot_actions_python.py  robot_functions_python_1.py  robot_functions_python_2.py  robot_functions_python_3.py  robot_functions_python_4.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/action/: MoveRail.action  PickPlaceObj.action
