<?xml version="1.0"?>
<package format="2">
  <name>my_robot_functions_python</name>
  <version>0.0.0</version>
  <description>The my_robot_functions_python package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="diego@todo.todo">diego</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>my_robot_interfaces</build_depend>
  <build_export_depend>my_robot_interfaces</build_export_depend>
  <exec_depend>my_robot_interfaces</exec_depend>

  

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <exec_depend>my_robot_moveit_config</exec_depend>
  <exec_depend>my_robot_ai</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
